<resources>
    <string name="app_name">SmartBaby</string>
    <string name="title_activity_menu_main">MenuMainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_chart_motion">Chart Motion</string>
    <string name="menu_chart_sound">Chart Sound</string>
    <string name="menu_chart_camera">Chart Camera</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>


    <!--login-->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login_success">Login success</string>
    <string name="login_fail">Login fail</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="admin">Admin</string>
    <string name="time_start">Time Start</string>
    <string name="time_end">Time End</string>
    <string name="view">View</string>
    <string name="chart_motion">Chart Motion</string>
    <string name="subtitle">Design: Nguyen Nhan</string>
    <string name="number_of_motion">Number of motion</string>
    <string name="motion">Motion</string>
    <string name="number_of_sound">Number of sound</string>
    <string name="sound">Sound</string>
    
    <string name="number_of_motion_camera">Number Of Motion Camera</string>

    <string name="notify_date_time">You have not selected a date and time</string>
</resources>
