<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_motion"
            android:icon="@drawable/ic_chartmotion"
            android:title="@string/menu_chart_motion" />
        <item
            android:id="@+id/nav_sound"
            android:icon="@drawable/ic_chartsound"
            android:title="@string/menu_chart_sound" />
        <item
            android:id="@+id/nav_camera"
            android:icon="@drawable/ic_chart_camera"
            android:title="@string/menu_chart_camera" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
