<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/login1" />

    <TextView
        android:text="@string/login"
        android:textSize="30dp"
        android:gravity="center"
        android:textStyle="bold"
        android:textColor="@color/colorBlack"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/username"
            android:textSize="25dp"
            android:width="140dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/txtUserName"
            android:hint="@string/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_marginTop="10dp"
        android:layout_height="wrap_content">

        <TextView
            android:text="@string/password"
            android:textSize="25dp"
            android:width="140dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/txtPassword"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

    <Button
        android:layout_marginTop="40dp"
        android:id="@+id/btnLogin"
        android:text="@string/login"
        android:onClick="XuLyLogin"
        android:layout_gravity="center"
        android:textColor="@color/colorWhite"
        android:background="@color/colorBlue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</LinearLayout>